crates/dsql-core/tests/it/snapshots/it__scenarios__completion_at_embedded_region_end.snap
---
source: crates/dsql-core/tests/it/scenarios.rs
assertion_line: 453
expression: "scenario.complete(\"host.ts\", markers[0]).await"
---
context: DocumentRoot table=<unresolved> scope=default replace=<none>
Keyword fragment
Keyword query
