crates/dsql-core/tests/it/snapshots/it__scenarios__completion_at_end_of_file.snap
---
source: crates/dsql-core/tests/it/scenarios.rs
assertion_line: 422
expression: "scenario.complete(\"s.dsql\", markers[0]).await"
---
context: DocumentRoot table=<unresolved> scope=default replace=<none>
Keyword fragment
Keyword query
