crates/dsql-core/tests/it/snapshots/it__scenarios__completion_mid_identifier_replaces_the_word.snap
---
source: crates/dsql-core/tests/it/scenarios.rs
expression: "sections.join(\"\\n\\n\")"
---
start:
context: SelectionBody table=title scope=default replace=[33..37]
Column episode_nr — integer
Column episode_of_id — integer
Column id — integer
Column imdb_id — integer
Column imdb_index — character varying(12)
Column kind_id — integer
Column md5sum — character varying(32)
Column phonetic_code — character varying(5)
Column production_year — integer
Column season_nr — integer
Column series_years — character varying(49)
Column title — text
Relation aka_title->episode_of_id — relation to public.aka_title via episode_of_id
Relation aka_title->movie_id — relation to public.aka_title via movie_id
Relation cast_info — relation to public.cast_info via movie_id
Relation complete_cast — relation to public.complete_cast via movie_id
Relation kind_type — relation to public.kind_type via kind_id
Relation movie_companies — relation to public.movie_companies via movie_id
Relation movie_info — relation to public.movie_info via movie_id
Relation movie_info_idx — relation to public.movie_info_idx via movie_id
Relation movie_keyword — relation to public.movie_keyword via movie_id
Relation movie_link->linked_movie_id — relation to public.movie_link via linked_movie_id
Relation movie_link->movie_id — relation to public.movie_link via movie_id
Relation title->episode_of_id — relation to public.title via episode_of_id

middle:
context: SelectionBody table=title scope=default replace=[33..37]
Column episode_nr — integer
Column episode_of_id — integer
Column id — integer
Column imdb_id — integer
Column imdb_index — character varying(12)
Column kind_id — integer
Column md5sum — character varying(32)
Column phonetic_code — character varying(5)
Column production_year — integer
Column season_nr — integer
Column series_years — character varying(49)
Column title — text
Relation aka_title->episode_of_id — relation to public.aka_title via episode_of_id
Relation aka_title->movie_id — relation to public.aka_title via movie_id
Relation cast_info — relation to public.cast_info via movie_id
Relation complete_cast — relation to public.complete_cast via movie_id
Relation kind_type — relation to public.kind_type via kind_id
Relation movie_companies — relation to public.movie_companies via movie_id
Relation movie_info — relation to public.movie_info via movie_id
Relation movie_info_idx — relation to public.movie_info_idx via movie_id
Relation movie_keyword — relation to public.movie_keyword via movie_id
Relation movie_link->linked_movie_id — relation to public.movie_link via linked_movie_id
Relation movie_link->movie_id — relation to public.movie_link via movie_id
Relation title->episode_of_id — relation to public.title via episode_of_id

end:
context: SelectionBody table=title scope=default replace=[33..37]
Column episode_nr — integer
Column episode_of_id — integer
Column id — integer
Column imdb_id — integer
Column imdb_index — character varying(12)
Column kind_id — integer
Column md5sum — character varying(32)
Column phonetic_code — character varying(5)
Column production_year — integer
Column season_nr — integer
Column series_years — character varying(49)
Column title — text
Relation aka_title->episode_of_id — relation to public.aka_title via episode_of_id
Relation aka_title->movie_id — relation to public.aka_title via movie_id
Relation cast_info — relation to public.cast_info via movie_id
Relation complete_cast — relation to public.complete_cast via movie_id
Relation kind_type — relation to public.kind_type via kind_id
Relation movie_companies — relation to public.movie_companies via movie_id
Relation movie_info — relation to public.movie_info via movie_id
Relation movie_info_idx — relation to public.movie_info_idx via movie_id
Relation movie_keyword — relation to public.movie_keyword via movie_id
Relation movie_link->linked_movie_id — relation to public.movie_link via linked_movie_id
Relation movie_link->movie_id — relation to public.movie_link via movie_id
Relation title->episode_of_id — relation to public.title via episode_of_id
